# documind

./: .gitignore  docker-compose.yml
document-service/: .dockerignore  .env-example  Dockerfile  pyproject.toml
document-service/app/: main.py
document-service/app/api/: agent.py  dependencies.py  documents.py  exception_handlers.py  health.py  middleware.py  requests.py
document-service/app/core/: config.py  database.py  exceptions.py  logger.py  redis_conn.py
document-service/app/llm/: client.py
document-service/app/migrations/: env.py
document-service/app/migrations/versions/: 2026_05_18_1153-29d3df9d4403_initial_migration.py  2026_05_18_1721-c5ea3dbeeefa_init.py
document-service/app/models/: requests.py
document-service/app/repositories/: base.py  requests.py
document-service/app/schemas/: agent.py  extraction.py  requests.py
document-service/app/services/: agent.py  base.py  db_manager.py  documents.py  requests.py
