[project]
name = "document-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Seryakov",email = "seryakov_2014@mail.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "anthropic (>=0.72.0,<0.73.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
